<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="trackasia_compassContentDescription">Map compass. Activate to reset the map rotation to North.</string>
    <string name="trackasia_attributionsIconContentDescription">Attribution icon. Activate to show attribution dialog.</string>
    <string name="trackasia_myLocationViewContentDescription">Location View. This shows your location on the map.</string>
    <string name="trackasia_mapActionDescription">Showing a Map created with TrackAsia. Scroll by dragging two fingers. Zoom by pinching two fingers.</string>
    <string name="trackasia_attributionsDialogTitle">TrackAsia Android</string>
    <string name="trackasia_attributionErrorNoBrowser">No web browser installed on device, can\'t open web page.</string>
    <string name="trackasia_offline_error_region_definition_invalid">Provided OfflineRegionDefinition doesn\'t fit the world bounds: %s</string>
</resources>
